# attiny85-clap-switch

./: .envrc  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  Cargo.toml  README.md  flake.nix  pyproject.toml  rust-toolchain.toml  wip-notes.md
.cargo/: config.toml
.devcontainer/: Containerfile  devcontainer.json
src/: main.rs
