[package]
name = "attiny85-clap-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
attiny-hal = { git = "https://github.com/rahix/avr-hal", features = ["attiny85"] }
avr-device = {version = "0.5.4", features = ["rt"]}
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
