[tool.poetry]
name = "attiny85-clap-switch"
version = "0.1.0"
description = "Project to build a sound-activated power toggle switch"
authors = ["Richtman, Ariel <10679234+arichtman@users.noreply.github.com>"]
license = "GPL-3y"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
